@startuml Medical Supply Chain ER Diagram

!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <u>x</u>
!define foreign_key(x) <i>x</i>

table(users) {
    primary_key(id): UUID
    --
    email: VARCHAR(255) UNIQUE NOT NULL
    password_hash: VARCHAR(255) NOT NULL
    role: ENUM('PHARMACY','distributor','ADMIN','CUSTOMER') NOT NULL
    first_name: VARCHAR(100) NOT NULL
    last_name: VARCHAR(100) NOT NULL
    phone: VARCHAR(20)
    organization_name: VARCHAR(255)
    license_number: VARCHAR(100)
    is_active: BOOLEAN DEFAULT TRUE
    is_verified: BOOLEAN DEFAULT FALSE
    created_at: TIMESTAMP DEFAULT NOW()
    updated_at: TIMESTAMP DEFAULT NOW()
    last_login: TIMESTAMP
}

table(addresses) {
    primary_key(id): UUID
    --
    foreign_key(user_id): UUID NOT NULL
    type: ENUM('HOME','BUSINESS','BILLING','SHIPPING') NOT NULL
    street: VARCHAR(255) NOT NULL
    city: VARCHAR(100) NOT NULL
    state: VARCHAR(100) NOT NULL
    zip_code: VARCHAR(20) NOT NULL
    country: VARCHAR(100) NOT NULL
    latitude: DECIMAL(10,8)
    longitude: DECIMAL(11,8)
    is_default: BOOLEAN DEFAULT FALSE
    created_at: TIMESTAMP DEFAULT NOW()
}

table(medicines) {
    primary_key(id): UUID
    --
    name: VARCHAR(255) NOT NULL
    generic_name: VARCHAR(255)
    manufacturer: VARCHAR(255) NOT NULL
    category: ENUM('TABLET','CAPSULE','SYRUP','INJECTION','CREAM','DROPS') NOT NULL
    dosage: VARCHAR(100)
    form: VARCHAR(100)
    description: TEXT
    requires_prescription: BOOLEAN DEFAULT FALSE
    active_ingredients: JSON
    storage_conditions: VARCHAR(255)
    created_at: TIMESTAMP DEFAULT NOW()
    updated_at: TIMESTAMP DEFAULT NOW()
}

table(distributors) {
    primary_key(id): UUID
    --
    foreign_key(user_id): UUID NOT NULL
    company_name: VARCHAR(255) NOT NULL
    license_number: VARCHAR(100) UNIQUE NOT NULL
    tax_id: VARCHAR(100)
    contact_person: VARCHAR(255)
    service_areas: JSON
    rating: DECIMAL(3,2) DEFAULT 0.00
    total_orders: INTEGER DEFAULT 0
    is_verified: BOOLEAN DEFAULT FALSE
    created_at: TIMESTAMP DEFAULT NOW()
    updated_at: TIMESTAMP DEFAULT NOW()
}

table(pharmacies) {
    primary_key(id): UUID
    --
    foreign_key(user_id): UUID NOT NULL
    pharmacy_name: VARCHAR(255) NOT NULL
    license_number: VARCHAR(100) UNIQUE NOT NULL
    registration_number: VARCHAR(100)
    operating_hours: JSON
    delivery_radius: INTEGER DEFAULT 5
    is_24_hours: BOOLEAN DEFAULT FALSE
    has_kiosk: BOOLEAN DEFAULT FALSE
    created_at: TIMESTAMP DEFAULT NOW()
    updated_at: TIMESTAMP DEFAULT NOW()
}

table(inventory) {
    primary_key(id): UUID
    --
    foreign_key(medicine_id): UUID NOT NULL
    foreign_key(pharmacy_id): UUID NOT NULL
    quantity: INTEGER NOT NULL DEFAULT 0
    reserved_quantity: INTEGER NOT NULL DEFAULT 0
    batch_number: VARCHAR(100)
    expiry_date: DATE
    cost_price: DECIMAL(10,2) NOT NULL
    selling_price: DECIMAL(10,2) NOT NULL
    reorder_level: INTEGER DEFAULT 10
    max_stock_level: INTEGER DEFAULT 1000
    last_updated: TIMESTAMP DEFAULT NOW()
    created_at: TIMESTAMP DEFAULT NOW()
}

table(distributor_catalog) {
    primary_key(id): UUID
    --
    foreign_key(distributor_id): UUID NOT NULL
    foreign_key(medicine_id): UUID NOT NULL
    unit_price: DECIMAL(10,2) NOT NULL
    minimum_order_quantity: INTEGER DEFAULT 1
    lead_time_days: INTEGER DEFAULT 7
    is_available: BOOLEAN DEFAULT TRUE
    last_updated: TIMESTAMP DEFAULT NOW()
    created_at: TIMESTAMP DEFAULT NOW()
}

table(orders) {
    primary_key(id): UUID
    --
    order_number: VARCHAR(50) UNIQUE NOT NULL
    foreign_key(customer_id): UUID
    foreign_key(pharmacy_id): UUID NOT NULL
    foreign_key(distributor_id): UUID
    order_type: ENUM('CUSTOMER_ORDER','PHARMACY_PROCUREMENT','ICN_EXCHANGE','AUTO_REORDER') NOT NULL
    status: ENUM('PENDING','CONFIRMED','PROCESSING','SHIPPED','DELIVERED','CANCELLED') NOT NULL
    total_amount: DECIMAL(12,2) NOT NULL
    payment_status: ENUM('PENDING','PAID','FAILED','REFUNDED') DEFAULT 'PENDING'
    payment_method: VARCHAR(50)
    notes: TEXT
    expected_delivery: TIMESTAMP
    actual_delivery: TIMESTAMP
    created_at: TIMESTAMP DEFAULT NOW()
    updated_at: TIMESTAMP DEFAULT NOW()
}

table(order_items) {
    primary_key(id): UUID
    --
    foreign_key(order_id): UUID NOT NULL
    foreign_key(medicine_id): UUID NOT NULL
    quantity: INTEGER NOT NULL
    unit_price: DECIMAL(10,2) NOT NULL
    total_price: DECIMAL(10,2) NOT NULL
    batch_number: VARCHAR(100)
    expiry_date: DATE
    created_at: TIMESTAMP DEFAULT NOW()
}

table(shipments) {
    primary_key(id): UUID
    --
    foreign_key(order_id): UUID NOT NULL
    tracking_number: VARCHAR(100) UNIQUE NOT NULL
    foreign_key(driver_id): UUID
    vehicle_id: VARCHAR(50)
    status: ENUM('PREPARING','IN_TRANSIT','OUT_FOR_DELIVERY','DELIVERED','RETURNED') NOT NULL
    current_latitude: DECIMAL(10,8)
    current_longitude: DECIMAL(11,8)
    estimated_delivery: TIMESTAMP
    actual_delivery: TIMESTAMP
    delivery_notes: TEXT
    created_at: TIMESTAMP DEFAULT NOW()
    updated_at: TIMESTAMP DEFAULT NOW()
}

table(tracking_updates) {
    primary_key(id): UUID
    --
    foreign_key(shipment_id): UUID NOT NULL
    latitude: DECIMAL(10,8) NOT NULL
    longitude: DECIMAL(11,8) NOT NULL
    status: VARCHAR(100)
    notes: TEXT
    recorded_at: TIMESTAMP DEFAULT NOW()
}

table(notifications) {
    primary_key(id): UUID
    --
    foreign_key(user_id): UUID NOT NULL
    title: VARCHAR(255) NOT NULL
    message: TEXT NOT NULL
    type: ENUM('ORDER_UPDATE','STOCK_ALERT','DELIVERY_UPDATE','SYSTEM_ALERT','PROMOTION') NOT NULL
    priority: ENUM('LOW','MEDIUM','HIGH','URGENT') DEFAULT 'MEDIUM'
    is_read: BOOLEAN DEFAULT FALSE
    metadata: JSON
    scheduled_at: TIMESTAMP
    sent_at: TIMESTAMP
    created_at: TIMESTAMP DEFAULT NOW()
}

table(icn_exchanges) {
    primary_key(id): UUID
    --
    foreign_key(requesting_pharmacy_id): UUID NOT NULL
    foreign_key(supplying_pharmacy_id): UUID
    foreign_key(medicine_id): UUID NOT NULL
    requested_quantity: INTEGER NOT NULL
    offered_quantity: INTEGER
    unit_price: DECIMAL(10,2)
    status: ENUM('OPEN','MATCHED','COMPLETED','CANCELLED') DEFAULT 'OPEN'
    urgency_level: ENUM('LOW','MEDIUM','HIGH','EMERGENCY') DEFAULT 'MEDIUM'
    expiry_date: DATE
    notes: TEXT
    created_at: TIMESTAMP DEFAULT NOW()
    updated_at: TIMESTAMP DEFAULT NOW()
}

table(demand_forecasts) {
    primary_key(id): UUID
    --
    foreign_key(pharmacy_id): UUID NOT NULL
    foreign_key(medicine_id): UUID NOT NULL
    predicted_demand: INTEGER NOT NULL
    confidence_score: DECIMAL(5,4) NOT NULL
    forecast_period_days: INTEGER NOT NULL
    factors: JSON
    created_at: TIMESTAMP DEFAULT NOW()
}

table(invoice_processing_logs) {
    primary_key(id): UUID
    --
    foreign_key(distributor_id): UUID NOT NULL
    foreign_key(order_id): UUID
    invoice_number: VARCHAR(100)
    file_path: VARCHAR(500)
    processing_status: ENUM('PENDING','PROCESSING','COMPLETED','FAILED') DEFAULT 'PENDING'
    extracted_data: JSON
    confidence_score: DECIMAL(5,4)
    error_message: TEXT
    processed_at: TIMESTAMP
    created_at: TIMESTAMP DEFAULT NOW()
}

table(system_logs) {
    primary_key(id): UUID
    --
    foreign_key(user_id): UUID
    action: VARCHAR(255) NOT NULL
    entity_type: VARCHAR(100)
    entity_id: UUID
    ip_address: INET
    user_agent: TEXT
    metadata: JSON
    created_at: TIMESTAMP DEFAULT NOW()
}

' Relationships
users ||--o{ addresses : "user_id"
users ||--|| distributors : "user_id"
users ||--|| pharmacies : "user_id"
users ||--o{ orders : "customer_id"
users ||--o{ notifications : "user_id"
users ||--o{ system_logs : "user_id"

medicines ||--o{ inventory : "medicine_id"
medicines ||--o{ distributor_catalog : "medicine_id"
medicines ||--o{ order_items : "medicine_id"
medicines ||--o{ icn_exchanges : "medicine_id"
medicines ||--o{ demand_forecasts : "medicine_id"

distributors ||--o{ distributor_catalog : "distributor_id"
distributors ||--o{ orders : "distributor_id"
distributors ||--o{ invoice_processing_logs : "distributor_id"

pharmacies ||--o{ inventory : "pharmacy_id"
pharmacies ||--o{ orders : "pharmacy_id"
pharmacies ||--o{ icn_exchanges : "requesting_pharmacy_id"
pharmacies ||--o{ icn_exchanges : "supplying_pharmacy_id"
pharmacies ||--o{ demand_forecasts : "pharmacy_id"

orders ||--o{ order_items : "order_id"
orders ||--|| shipments : "order_id"
orders ||--o{ invoice_processing_logs : "order_id"

shipments ||--o{ tracking_updates : "shipment_id"

@enduml